crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__resize_nested_hsplit_correct.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────╮╭──────────────────────────────────────╮╭──────────────────╮
│  A                                                    +  ││  B                                +  ││  C            +  │
│ ──────────────────────────────────────────────────────── ││ ──────────────────────────────────── ││ ──────────────── │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
│                                                          ││                                      ││                  │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────╯╰──────────────────╯
 ( ␣ ) leader · ( : ) commands · ( n ) new tab · ( s/v ) split · ( q ) quit
