crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__resize_nested_vsplit_correct.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  Top                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  Mid                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  Bot                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
