crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__small_terminal.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────╮
│  1                                                    +  │
╰──────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────╮
│  zsh                                                  +  │
│ ──────────────────────────────────────────────────────── │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
╰──────────────────────────────────────────────────────────╯
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q
